notebook.vue in progress...
